--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Whimsical Whisk Bakery</title>
+    <title>The Sweet Delights Page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <h1>The Whimsical Whisk 🧁</h1>
+      <h1>The Sweet Delights🧁</h1>
       <p>Where every crumb tells a story.</p>
     </header>
 
     <main>
-      <!-- Tabs -->
       <div class="tabs">
         <button class="tab active" data-tab="cakes">Cakes</button>
         <button class="tab" data-tab="cookies">Cookies</button>
@@ -27,7 +26,6 @@
         Freshly baked breads from scratch.
       </div>
 
-      <!-- Slideshow -->
       <div class="slideshow">
         <img
           id="slide"
@@ -37,11 +35,9 @@
         <button id="nextSlide">Next</button>
       </div>
 
-      <!-- Interactive Button -->
       <button id="magicBtn">Click Me!</button>
       <p id="magicMessage"></p>
 
-      <!-- Newsletter Form -->
       <form id="signupForm">
         <h2>Join the Bread Bulletin 🥖</h2>
         <label>Email: <input type="email" id="email" required /></label><br />
